--- a/css/login.css
+++ b/css/login.css
@@ -132,3 +132,13 @@ form input[type="submit"]{
 form input[type="submit"]:hover{
   background: #2c52ed;
 }
+
+.error{
+  margin-top: 10px;
+}
+.error p{
+  border: 2px solid red;
+  background-color: rgb(248, 197, 197);
+  padding: 10px 0;
+  margin: 0;
+}
