--- a/css/main.css
+++ b/css/main.css
@@ -3,5 +3,13 @@
 }
 
 body{
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Poppins', sans-serif;
+    width: 100%;
+}
+
+.fixedpos{
+    position: sticky;
+    top: 0;
+    z-index: 10;
+    width: 100%;
 }
