--- a/css/locate.css
+++ b/css/locate.css
@@ -13,7 +13,6 @@
     width: 50%;
     display: flex;
     flex-direction: column;
-
 }
 
 .labelled-items {
@@ -33,11 +32,89 @@
     box-shadow: 10px 10px rgba(103, 255, 92, 0.553);
 }
 
-table{
+.table1 {
     color: white;
     font-size: 15px;
-    margin: 10px;
-    width: 100%;
+    margin-top: 100px;
+}
+
+.card{
+	font-size: 15px;
+	margin: 0 100px;
+}
+
+.card-body{
+	font-size: 10px;
+	font-style: italic;
+	color: #4e4e4e00;
+}
+
+#radios label {
+	cursor: pointer;
+	position: relative;
+}
+
+#radios label + label {
+	margin-left: 15px;
+}
+
+input[type="radio"] {
+	opacity: 0; 
+	position: absolute;
+}
+
+input[type="radio"] + span {
+	font-family: 'Material Icons';
+	color: #B3CEFB;
+	border-radius: 50%;
+	padding: 12px;
+	transition: all 0.4s;
+	-webkit-transition: all 0.4s;
+}
+
+input[type="radio"]:checked + span {
+	color: #D9E7FD;
+  background-color: #08ff7344;
+}
+
+input[type="radio"]:focus + span {
+	color: #fff;
+}
+
+input[type="text"]{
+	border-radius: .5rem ;
+	border: 0.5px solid grey;
+	height: 30px;
+	padding: 5px 5px;
+	margin: 5px;
+}
+#radios label:hover::before {
+	content: attr(for);
+	font-family: Roboto, -apple-system, sans-serif;
+	text-transform: capitalize;
+	font-size: 11px;
+	position: absolute;
+	top: 170%;
+	left: 0;
+	right: 0;
+	opacity: 0.75;
+	background-color: #323232;
+	color: #fff;	
+	padding: 4px;
+	border-radius: 3px;
+  display: block;
+}
+
+h1 {
+	font-weight: 300;
+	color: #D9E7FD;
+	text-align: center;
+	margin-bottom: 50px;
+}
+
+#radios {
+	text-align: center;
+	margin: 0 auto;
 }
 
 
