--- a/css/locate.css
+++ b/css/locate.css
@@ -1,4 +1,5 @@
 .map-container {
+	padding: 60px 0 20px;
     display: flex;
     height: 100%;
 }
@@ -10,6 +11,7 @@
 }
 
 .info {
+	padding: 60px 50px 20px;
     width: 50%;
     display: flex;
     flex-direction: column;
@@ -35,7 +37,7 @@
 .table1 {
     color: white;
     font-size: 15px;
-    margin-top: 100px;
+    margin-top: auto;
 }
 
 .card{
@@ -117,4 +119,13 @@ h1 {
 	margin: 0 auto;
 }
 
+.hide-close-button {
+    display: none;
+}
 
+#tips{
+	font-size: 12px;
+	color: grey;
+	font-style: italic;
+	padding: 15px;
+}
