--- a/css/login.css
+++ b/css/login.css
@@ -165,3 +165,11 @@ form input[type="submit"]:hover{
 .btnnn:hover{
   background-color: #2c52ed;
 }
+
+.success{
+  border: rgb(201, 201, 201) solid 2px;
+  background-color: rgb(255, 255, 255);
+  padding: 5px;
+  border-radius: 5px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+}
