--- a/css/forum.css
+++ b/css/forum.css
@@ -135,11 +135,14 @@
 }
 
 .post-list{
-    padding: 10px 50px;
+    padding: 10px 40px;
     background-color: white;
     border-radius: 0 0 5px 5px;
     padding-bottom: 30px;
     height: 100%;
+}
+.posthover{
+    padding: 0px 10px;
 }
 .posthover:hover{
     background-color: whitesmoke;
@@ -178,6 +181,7 @@
     right: 0;
     height: 0;
     overflow: hidden;
+    border-radius: 5px;
     transition: height 0.2s linear;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
@@ -225,6 +229,9 @@
     font-size: 18px;
     font-weight: bold;
 }
+.postTitle:hover{
+    text-decoration: underline;
+}
 .postContent{
     white-space: wrap;
 }
@@ -239,42 +246,6 @@
     text-align: center;
     font-size: large;
     margin-top: 20px;
-}
-
-.addPostForm{
-
-}
-
-.addPostForm div{
-    margin: 10px;
-}
-
-.addPostForm div label{
-    display: block;
-}
-
-
-.inputPostContent, .inputPostTitle, .inputCategory{
-    width: 100%;
-    background-color: rgb(244, 244, 244);
-    min-height: 18px;
-    border: 1px solid rgb(140, 140, 140);
-    border-radius: 4px;
-}
-
-.submitbtnStyle{
-    text-align: center;
-}
-
-.submitbtn{
-    margin: 20px auto;
-    background-color: rgb(127, 255, 202);
-    border: none;
-    border-radius: 20px;
-    padding: 10px 20px;
-}
-.submitbtn:hover{
-    background-color: rgb(103, 207, 164);
 }
 
 .layerThree{
