--- a/css/guide.css
+++ b/css/guide.css
@@ -1,15 +1,15 @@
 .guidePageContainer{
     min-height: 100vh;
     min-width: 1000px;
-    background-color: rgb(232, 254, 238);
-    padding: 60px 0 20px;
+    background-color: rgb(255, 255, 255);
+    padding: 0 0 20px;
 }
 
 .slider{
     width: 100%;
     max-width: 100vw;
-    height: 600px;
-    margin: auto;
+    height: 500px;
+    margin: 56px auto 0;
     position: relative;
     overflow: hidden;
     background-color: #c2eabe;
@@ -30,14 +30,12 @@
     align-items: center;
 }
 .slideContent{
-    width: 80%;
-    height: 80%;
+    width: 100%;
+    height: 100%;
     white-space: wrap;
     text-align: center;
 }
-.slideContent .slideContentDescription{
-    
-}
+
 .slider .buttons{
     position: absolute;
     top: 45%;
@@ -83,4 +81,128 @@
     .slider{
         height: 400px;
     }
+}
+
+.guideContainer{
+    /* border: 2px solid black; */
+    min-height: 400px;
+	padding: 20px 30px;
+}
+
+.guideCategoryNav{
+	width: 100%;
+}
+.guideCategoryNav h4{
+	padding: 5px 10px;
+}
+
+.guideListHeader{
+	display: flex;
+	align-items: center;
+	padding: 5px 10px;
+}
+
+.guideListHeader h4{
+	margin: 0;
+}
+.guideListHeader .manageIcon{
+	margin-left: 10px;
+	background-color: rgb(210, 210, 210);
+	color: black;
+	padding: 0 5px;
+	font-size: 1.5rem;
+	border-radius: 20px;
+}
+
+.guideCategorylist{
+    display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+}
+
+.guideCategorylist a{
+	text-decoration: none;
+	color: black;
+	padding: 5px 10px;
+	border: 2px solid lightgray;
+	border-radius: 5px;
+	margin: 5px 10px;
+}
+.guideCategorylist a h6{
+	margin: 0;
+}
+
+.guideCategorylist a:hover{
+	background-color: rgb(226, 226, 226);
+}
+
+.guideListContainer{
+	margin: 20px 0;
+	width: 100%;
+	/* border: 2px solid saddlebrown; */
+}
+
+.guideCardList{
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.guideCard{
+	width: 260px;
+	height: 400px;
+	border-radius: 10px;
+	border: 2px solid rgb(222, 222, 222);
+	margin: 5px 20px 20px 10px;
+	transition: all .3s;
+	overflow: hidden;
+	position: relative;
+}
+.guideCard:hover{
+	transform: scale(1.05);
+	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+	cursor: pointer;
+}
+
+.guideImg{
+	width: 100%;
+	height: 160px;
+	border-radius: 10px 10px 0 0;
+}
+
+.guideCategory, .guideTitle, .guideDescription{
+	margin: 15px;
+}
+
+.guideCategory{
+	font-weight: 500;
+	color: rgb(79, 107, 88);
+	background-color: rgb(135, 255, 211);
+	width: fit-content;
+	padding: 5px 15px;
+	border-radius: 5px;
+}
+.guideTitle{
+	font-weight: 600;
+	font-size: 20px;
+	display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.guideDescription{
+	font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+.learnmore{
+	position: absolute;
+	bottom: 5px;
+	right: 15px;
+}
+.guideCard:hover .learnmore{
+	color: rgb(40, 160, 70);
 }
