--- a/css/guide.css
+++ b/css/guide.css
@@ -161,6 +161,7 @@
 	transform: scale(1.05);
 	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	cursor: pointer;
+    background-color: rgb(243, 243, 243);
 }
 
 .guideImg{
