--- a/css/login.css
+++ b/css/login.css
@@ -9,7 +9,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 60px 0 20px;
+  padding: 60px 0 20px;
 }
 ::selection{
   color: #fff;
