--- a/css/guideManage.css
+++ b/css/guideManage.css
@@ -34,7 +34,7 @@
     border-radius: 5px;
     white-space: nowrap;
     padding: 6px 10px;
-    background-color: #b3f5ce;
+    background-color: #cffde2;
     border: 1px solid rgb(131, 217, 131);
 }
 .addGuideBtn:hover{
