--- a/css/post.css
+++ b/css/post.css
@@ -68,7 +68,6 @@
     border: none;
     padding: 5px 10px;
     margin-right: 10px;
-    border: 2px rgb(232, 232, 232) solid;
 }
 
 .addcomment form .submitCommentBtn:hover{
@@ -77,36 +76,44 @@
 
 .comment-list{
     min-height: 50px;
+    margin-top: 30px;
 }
 
-.comment{
+.commentWrapper{
     margin: 10px 0 20px 0;
 }
-.commentbackground{
-    background-color: lightgray;
+.comment{
+    display: flex;
 }
+
 .commentUser{
     display: flex;
     align-items: center;
 }
-
 .comment-content{
-    margin-left: 50px;
+    width: 100%;
 }
 
 .comment-feature{
     display: flex;
-    margin-left: 50px;
+    margin-left: auto;
+    position: relative;
+    height: fit-content;
+}
+
+.comment-feature.dropActive .dropdownContainer{
+    height: 80px;
+    transition: height 0.2s linear;
 }
 
 .editcomment, .delcomment{
     border: none;
-    padding: 5px 8px;
-    border-radius: 20px;
-    font-size: 14px;
-}
-.editcomment{
-    margin-right: 10px;
+    padding: 8px 10px 8px 15px;
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    background-color: white;
+    white-space: nowrap;
 }
 
 .editcomment:hover, .delcomment:hover{
@@ -116,4 +123,139 @@
 .inputNewComment{
     width: 100%;
     padding: 5px;
+}
+/* Need update */
+.statusMessageBox{
+    position: fixed;
+    bottom: 30px;
+    right: 40px;
+    background: #fff;
+    min-width: 100px;
+    min-height: 30px;
+    padding: 10px 25px 10px 15px;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transform: translateX(calc(100% + 100px));
+    transition: all 0.5s cubic-bezier(0.68, -0.55, 0.25, 1.35);
+    z-index: 2;
+}
+
+.statusMessageBox.active{ 
+    transform: translateX(0);
+}
+.toast-content{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.toast-check{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 35px;
+    width: 35px;
+    background-color: #40f467;
+    border-radius: 50%;
+    color: #fff;
+    font-size: 20px;
+}
+.message{
+    display: flex;
+    flex-direction: column;
+    margin: 0 20px;
+}
+.message-text{
+    font-size: 20px;
+    font-weight: 600;
+}
+.text-1{
+    color: #333;
+}
+.text-2{
+    color: #666;
+    font-weight: 400;
+    font-size: 16px;
+}
+.toast-close{
+    position: absolute;
+    top: 10px;
+    right: 15px;
+    padding: 5px;
+    cursor: pointer;
+    opacity: 0.7;
+}
+.toast-close:hover{
+    opacity: 1;
+}
+.progressbar{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 3px;
+    width: 100%;
+    background-color: #40f467;
+}
+
+.progressbar.active{
+    animation: progress 4s linear forwards;
+    }
+    @keyframes progress {
+    100%{
+        width: 0%;
+    }
+}
+
+.replyToggleBtn{
+    background-color: transparent;
+    border-radius: 20px;
+    padding: 4px 8px;
+    border: 1px solid lightgray;
+    font-size: 13px;
+    display: flex;
+    align-items: center;
+}
+.replyToggleBtn:hover{
+    background-color: #ddd;
+}
+
+.replyForm{
+    width: 100%;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out, margin 0.2s ease-in-out;
+    margin-top: 0;
+    margin-bottom: 0;
+}
+.replyToggleBtn.repActive + .replyForm{
+    margin: 15px 0 10px;
+    max-height: 100px;
+}
+.replyInput, .replyTool{
+    width: 100%;
+}
+.replyInput{
+    padding-left: 5px;
+}
+.replyTool{
+    margin-left: auto;
+    width: fit-content;
+    margin-top: 10px;
+}
+.closeReplybtn, .replybtn{
+    border: none;
+    border-radius: 20px;
+    padding: 5px 10px;
+    background-color: #ddd;
+}
+.closeReplybtn:hover, .replybtn:hover{
+    background-color: #ccc;
+}
+
+.showRepliesbtn{
+    border: none;
+    font-style: italic;
+    background-color: transparent;
+    color: blue;
+    margin: 5px 0;
 }
