--- a/css/forum.css
+++ b/css/forum.css
@@ -364,24 +364,26 @@
     }
 }
 
-/* .statusMessageBox1.active{ 
-    transform: translateX(0);
-} */
 .toast-content{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.toast-check{
+.toast-icon{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 35px;
     width: 35px;
-    background-color: #40f467;
     border-radius: 50%;
     color: #fff;
     font-size: 20px;
+}
+.greenColor{
+    background-color: #40f467;
+}
+.redColor{
+    background-color: #f44040;
 }
 .message{
     display: flex;
@@ -418,7 +420,7 @@
     right: 0;
     height: 3px;
     width: 100%;
-    background-color: #40f467;
+    /* background-color: #40f467; */
 }
 
 .progressbar.active{
