--- a/css/guide.css
+++ b/css/guide.css
@@ -1,8 +1,7 @@
 .guidePageContainer{
     min-height: 100vh;
     min-width: 1000px;
-    background-color: rgb(255, 255, 255);
-    padding: 0 0 20px;
+    background-color: #ffffff;
 }
 
 .slider{
@@ -89,8 +88,10 @@
 .guideContainer{
     /* border: 2px solid black; */
     min-height: 400px;
-	padding: 20px 30px;
-    background-color: white;
+	padding: 20px 30px 40px;
+    background-color: #7ee8fa;
+    background-image: linear-gradient(315deg, #7ee8fa 0%, #b9f9b2 74%);
+    
 }
 
 .guideCategoryNav{
