--- a/css/forum.css
+++ b/css/forum.css
@@ -196,7 +196,7 @@
 
 .editpost, .delpost{
     border: none;
-    padding: 8px 10px 8px 15px;
+    padding: 8px 15px;
     width: 100%;
     display: flex;
     justify-content: flex-start;
