--- a/css/post.css
+++ b/css/post.css
@@ -108,7 +108,7 @@
 
 .editcomment, .delcomment{
     border: none;
-    padding: 8px 10px 8px 15px;
+    padding: 8px 15px;
     width: 100%;
     display: flex;
     justify-content: flex-start;
