--- a/css/guide.css
+++ b/css/guide.css
@@ -112,7 +112,7 @@
 }
 .guideListHeader .manageIcon{
 	margin-left: 10px;
-	background-color: rgb(229, 229, 229);
+	background-color: rgb(237 236 236);
 	color: black;
 	padding: 0 5px;
 	font-size: 1.5rem;
