--- a/css/login.css
+++ b/css/login.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 .pageContainer{
   /* background-color: rgb(167, 249, 215); */
-  margin: 60px 0 20px;
+  /* margin: 60px 0 20px; */
   background-image: linear-gradient(to right, #8a64d6, #0cead9);
   min-height: 100vh;
   width: 100%;
