--- a/css/forum.css
+++ b/css/forum.css
@@ -48,7 +48,7 @@
 }
 
 .search button:hover{
-    background-color: rgb(43, 149, 106);
+    background-color: rgb(72, 192, 144);
 }
 .forum-category{
     background-color: rgb(248, 248, 248);
@@ -261,7 +261,7 @@
     height: fit-content;
 }
 
-.forumStatistic{
+.forumStatistic, .recommend-post{
     width: 100%;
     background-color: rgb(248, 248, 248);
     padding: 10px;
@@ -279,54 +279,20 @@
     margin: 0;
 }
 
-.error{
-    border: rgb(250, 145, 145) solid 2px;
-    background-color: rgb(251, 161, 161);
+.recommend-post{
+    margin-top: 20px;
 }
-
-.success{
-    border: rgb(171, 255, 171) solid 2px;
-    background-color: rgb(195, 255, 202);
-}
-
-.success, .error{
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 10px;
-    width: fit-content;
-    margin-left: 50px;
-    position: fixed;
+.recommendPostList{
     display: flex;
-    align-items: center;
-    bottom: 20px;
-    right: 40px;
-    animation: deleteAnimation 5s linear forwards;;
-    animation-fill-mode: forwards;
+    flex-direction: column;
 }
-@keyframes deleteAnimation {
-    0% {
-        /* opacity: 1; */
-        right: -200px;
-    }
-    20%{
-        right: 40px;
-    }
-    40%{
-        right: 40px;
-    }
-    70%{
-        right: 40px;
-    }
-    90%{
-        right: -100px;
-    }
-    100% {
-        right: -200px;
-        display: none;
-    }
-  }
-
-.success img, .error img{
-    margin-right: 10px;
+.rpost{
+    display: flex;
+    text-decoration: none;
+    color: black;
+}
+.rpost:hover{
+    color: blue;
 }
 
 .statusMessageBox1{
