--- a/css/login.css
+++ b/css/login.css
@@ -177,3 +177,95 @@ form input[type="submit"]:hover{
   border-radius: 5px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
+
+#custom-click-button {
+  height: 50px;
+  border: 1px solid #bfbfbf;
+  border-bottom-width: 2px;
+  transition: all 0.2s ease;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+
+.upload-container {
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: #fcfcfc;
+}
+
+.upload-card {
+  border-radius: 10px;
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.3);
+  width: 600px;
+  height: 380px;
+  background-color: #ffffff;
+  padding: 10px 30px 40px;
+}
+
+.upload-card h3 {
+  font-size: 22px;
+  font-weight: 600;
+
+}
+
+.upload-drop_box {
+  margin: 10px 0;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  background: linear-gradient(white, white) padding-box,
+      linear-gradient(to right, #8a64d6, #0cead9) border-box;
+  border: 2px dashed white;
+  border-radius: 5px;
+}
+
+.upload-drop_box h4 {
+  font-size: 16px;
+  font-weight: 400;
+  color: #2e2e2e;
+}
+
+.upload-drop_box p {
+  margin-top: 10px;
+  margin-bottom: 20px;
+  font-size: 12px;
+  color: #a3a3a3;
+}
+
+.upload-btn {
+  text-decoration: none;
+  background-image: linear-gradient(to right, #8a64d6, #0cead9);
+  color: #ffffff;
+  padding: 10px 20px;
+  border: none;
+  outline: none;
+  transition: 0.3s;
+}
+
+.upload-btn:hover {
+  text-decoration: none;
+  background-image: linear-gradient(to right, #ffffff, #ffffff);
+  color: #005af0;
+  padding: 10px 20px;
+  border: none;
+  outline: 2px solid #0cead9;
+}
+
+.upload-image {
+  fill: url(#MyGradient);
+}
+
+#MyGradient {
+  --color-start: #8a64d6;
+  --color-stop: #0cead9;
+}
+
+.border-gradient-purple {
+  border-image-source: linear-gradient(to left, #743ad5, #d53a9d);
+}
