--- a/css/forum.css
+++ b/css/forum.css
@@ -41,9 +41,10 @@
     background-color: rgb(72, 192, 144);
 }
 .forum-category{
-    background-color: rgb(248, 248, 248);
+    background-color: white;
     border-radius: 5px;
     padding: 10px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .forum-category h5{
     padding: 0 5px;
@@ -253,7 +254,7 @@
 
 .forumStatistic, .recommend-post{
     width: 100%;
-    background-color: rgb(248, 248, 248);
+    background-color: white;
     padding: 10px;
     border-radius: 5px;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
