--- a/css/guide.css
+++ b/css/guide.css
@@ -6,7 +6,7 @@
 
 .slider{
     width: 100%;
-    max-width: 100vw;
+    /* max-width: 100vw; */
     height: 500px;
     margin: 56px auto 0;
     position: relative;
@@ -86,25 +86,27 @@
 }
 
 .guideContainer{
-    /* border: 2px solid black; */
     min-height: 400px;
-	padding: 20px 30px 40px;
-    /* background-color: #7ee8fa;
-    background-image: linear-gradient(315deg, #7ee8fa 0%, #b9f9b2 74%); */
-    
+	padding: 25px 40px 40px;
+    display: flex;
+    flex-direction: row;
+    gap: 30px;
 }
 
 .guideCategoryNav{
 	width: 100%;
+    flex: 1;
 }
 .guideCategoryNav h4{
 	padding: 5px 10px;
+    line-height: 1.5;
 }
 
 .guideListHeader{
 	display: flex;
 	align-items: center;
 	padding: 5px 10px;
+    margin-bottom: 20px;
 }
 
 .guideListHeader h4{
@@ -133,7 +135,7 @@
 
 .guideCategorylist{
     display: flex;
-	flex-direction: row;
+	flex-direction: column;
 	flex-wrap: wrap;
 }
 
@@ -147,12 +149,15 @@
 }
 .guideCategorylist a h6{
 	margin: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .guideCategorylist a {
     position: relative;
     display: inline-block;
-    margin: 15px;
+    margin: 10px;
     padding: 10px 15px;
     text-align: center;
     font-size: 18px;
@@ -176,30 +181,30 @@
   }
 
 .guideListContainer{
-	margin: 20px 0;
+	margin: 0;
 	width: 100%;
-	/* border: 2px solid saddlebrown; */
 }
 
 .guideCardList{
-	display: flex;
-	flex-wrap: wrap;
+	display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
+    gap: 20px;
 }
 
 .guideCard{
 	width: 260px;
-	height: 400px;
+	height: 380px;
 	border-radius: 10px;
 	margin: 5px 20px 20px 10px;
 	transition: all .3s;
 	overflow: hidden;
 	position: relative;
     background-color: white;
-    border: 1px solid lightgrey;
+    box-shadow: 0 2px 20px rgba(0, 0, 0, 0.1);
 }
 .guideCard:hover{
 	transform: scale(1.05);
-	box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+	box-shadow: 0 2px 20px rgba(0, 0, 0, 0.2);
 	cursor: pointer;
     background-color: rgb(245, 245, 245);
 }
@@ -211,21 +216,20 @@
 }
 
 .guideCategory, .guideTitle, .guideDescription{
-	margin: 15px;
+	margin: 10px 15px;
 }
 
 .guideCategory{
 	font-weight: 500;
 	color: rgb(79, 107, 88);
-	background-color: rgb(135, 255, 211);
 	width: fit-content;
-	padding: 5px 15px;
-	border-radius: 5px;
+	padding: 3px 10px;
+	border-radius: 20px;
     font-size: 13px;
 }
 .guideTitle{
 	font-weight: 600;
-	font-size: 20px;
+	font-size: 18px;
 	display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
@@ -235,7 +239,7 @@
 .guideDescription{
 	font-size: 14px;
     display: -webkit-box;
-    -webkit-line-clamp: 2;
+    -webkit-line-clamp: 3;
     -webkit-box-orient: vertical;
     overflow: hidden;
     text-overflow: ellipsis;
@@ -244,8 +248,9 @@
 	position: absolute;
 	bottom: 5px;
 	right: 15px;
+    color: blue;
 }
 .guideCard:hover .learnmore{
-	color: rgb(62, 155, 85);
+	color: rgb(40, 40, 129);
 }
 
