--- a/css/post.css
+++ b/css/post.css
@@ -124,7 +124,7 @@
     width: 100%;
     padding: 5px;
 }
-/* Need update */
+
 .statusMessageBox{
     position: fixed;
     bottom: 30px;
@@ -148,13 +148,12 @@
     justify-content: center;
     align-items: center;
 }
-.toast-check{
+.toast-icon{
     display: flex;
     justify-content: center;
     align-items: center;
     height: 35px;
     width: 35px;
-    background-color: #40f467;
     border-radius: 50%;
     color: #fff;
     font-size: 20px;
@@ -194,7 +193,6 @@
     right: 0;
     height: 3px;
     width: 100%;
-    background-color: #40f467;
 }
 
 .progressbar.active{
